# chc_automation

./: .gitignore  README.md  fetch_and_send.py  main.py  process.py  pyproject.toml  regex.py  test.py  utils.py
